@startuml FootballPenaltyShooterGameClassDiagram

skinparam classAttributeIconSize 0

class Player {
    - name : String
    - matchCount : int
    - power : int
    - skill : int
    + Player(name : String, matchCount : int)
    + printSelfInfo() : void
    - printPower() : void
    - printSkill() : void
    + getSkill() : int
    + printGoalBeforeShoot() : void
    + upgradePower(level : int) : void
}

class MediumSkill {
    - power : int = 1
    - final skill : int = 2
    + MediumSkill(name : String, matchCount : int)
    + printSelfInfo() : void
    + printPower() : void
    + getSkill() : int
    + printSkill() : void
    + printGoalBeforeShoot() : void
    + upgradePower(level : int) : void
}

class BeginnerSkill {
    - power : int = 1
    - final skill : int = 1
    + MediumSkill(name : String, matchCount : int)
    + printSelfInfo() : void
    + printPower() : void
    + getSkill() : int
    + printSkill() : void
    + printGoalBeforeShoot() : void
    + upgradePower(level : int) : void
}

class ExpertSkill {
    - power : int = 1
    - final skill : int = 3
    + MediumSkill(name : String, matchCount : int)
    + printSelfInfo() : void
    + printPower() : void
    + getSkill() : int
    + printSkill() : void
    + printGoalBeforeShoot() : void
    + upgradePower(level : int) : void
}

class PlayerList {
    + {static} l1 : ArrayList<Player>
    + {static} skillUpgrade(curPlayer : int) : void
}

Player <|-- MediumSkill
Player <|-- BeginnerSkill
Player <|-- ExpertSkill

PlayerList "1" -- "*" Player : manages >

@enduml